--- a/app/src/main/res/layout/activity_players.xml
+++ b/app/src/main/res/layout/activity_players.xml
@@ -20,6 +20,7 @@
         app:layout_constraintVertical_bias="0.36" />
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="386dp"
         android:layout_height="591dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,10 +34,10 @@
 
             <TextView
                 android:id="@+id/playersTextView"
-                android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="593dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="40dp"
+                android:layout_weight="1"
                 android:fontFamily="@font/viga"
                 android:textColor="@color/Branco"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -47,9 +48,18 @@
                 app:layout_constraintVertical_bias="0.127" />
 
         </LinearLayout>
-
-
     </ScrollView>
+
+    <ImageView
+        android:layout_width="178dp"
+        android:layout_height="248dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginBottom="200dp"
+        android:src="@drawable/squad"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/header"
@@ -63,4 +73,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/viga"
+        android:text="Elenco:"
+        android:textColor="#109EB6"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header" />
 </androidx.constraintlayout.widget.ConstraintLayout>
